--- a/HTML/Footer.HTML
+++ b/HTML/Footer.HTML
@@ -80,63 +80,137 @@
             </ul>
           </div>
         </div>
-        <div class="footer-columne">
-          <ul class="columne">
-            <h6 class="footer-title">Hỗ trợ khách hàng</h6>
-            <li><a href="#"></a>Bảo vệ ngươi mua</li>
-            <li><a href="#"></a>Hướng dẫn mua hàng</li>
-            <li><a href="#"></a>Phương thức thanh toán</li>
-            <li><a href="#"></a>Chính sách đổi trả hàng</li>
-            <li><a href="#"></a>Câu hỏi thường gặp</li>
-            <li><a href="#"></a>Cách thức giao nhận</li>
-            <li><a href="#"></a>Chính sách giao dịch</li>
-            <li><a href="#"></a>Chính sách bảo mật</li>
-            <li><a href="#"></a>Chính sách giải quyết khiếu nại</li>
-          </ul>
-          <ul class="columne">
-            <h6 class="footer-title">Về FADO.VN</h6>
-            <li><a href="#">Giới thiệu FADO</a></li>
-            <li><a href="#">Phản hồi khách hàng</a></li>
-            <li><a href="#">Báo chí nói về FADO</a></li>
-            <li><a href="#">Trung tâm hỗ trợ</a></li>
-            <li><a href="#">tin tức</a></li>
-            <li><a href="#">Quy chế hoạt động</a></li>
-            <li><a href="#">Cơ hội nghề nghiệp</a></li>
-            <li><a href="#">Nghĩa vụ thuế</a></li>
-            <li><a href="#">Liên kết hợp tác</a></li>
-          </ul>
-          <ul class="columne">
-            <h6 class="footer-title">Hợp tác & liên kết</h6>
-            <li><a href="#">Bán hàng cùng FADO</a></li>
-            <li><a href="#">Chính sách đại lý</a></li>
-          </ul>
-          <ul class="columne ship">
-            <h6 class="footer-title">Dịch vụ giao hàng</h6>
-            <a><img src="../IMG/shopee-logo-31412.png" alt="" /></a>
-          </ul>
-          <ul class="columne">
-            <h6 class="footer-title">Chấp nhận thanh toán</h6>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-          </ul>
+        <div class="list-columne">
+          <div class="footer-columne">
+            <ul class="columne">
+              <h6 class="footer-title">Hỗ trợ khách hàng</h6>
+              <li><a href="#"></a>Bảo vệ ngươi mua</li>
+              <li><a href="#"></a>Hướng dẫn mua hàng</li>
+              <li><a href="#"></a>Phương thức thanh toán</li>
+              <li><a href="#"></a>Chính sách đổi trả hàng</li>
+              <li><a href="#"></a>Câu hỏi thường gặp</li>
+              <li><a href="#"></a>Cách thức giao nhận</li>
+              <li><a href="#"></a>Chính sách giao dịch</li>
+              <li><a href="#"></a>Chính sách bảo mật</li>
+              <li><a href="#"></a>Chính sách giải quyết khiếu nại</li>
+            </ul>
+            <ul class="columne">
+              <h6 class="footer-title">Về FADO.VN</h6>
+              <li><a href="#">Giới thiệu FADO</a></li>
+              <li><a href="#">Phản hồi khách hàng</a></li>
+              <li><a href="#">Báo chí nói về FADO</a></li>
+              <li><a href="#">Trung tâm hỗ trợ</a></li>
+              <li><a href="#">tin tức</a></li>
+              <li><a href="#">Quy chế hoạt động</a></li>
+              <li><a href="#">Cơ hội nghề nghiệp</a></li>
+              <li><a href="#">Nghĩa vụ thuế</a></li>
+              <li><a href="#">Liên kết hợp tác</a></li>
+            </ul>
+            <ul class="columne">
+              <h6 class="footer-title">Hợp tác & liên kết</h6>
+              <li><a href="#">Bán hàng cùng FADO</a></li>
+              <li><a href="#">Chính sách đại lý</a></li>
+            </ul>
+            <ul class="columne ship">
+              <h6 class="footer-title">Dịch vụ giao hàng</h6>
+              <li>
+                <a
+                  ><img
+                    src="https://st-fe-v2.fado.vn/desktop/image/logo/fado_express_v2.png"
+                    alt=""
+                /></a>
+              </li>
+              <li>
+                <a
+                  ><img
+                    src="https://st-fe-v2.fado.vn/desktop/image/logo/proship.png"
+                    alt=""
+                /></a>
+              </li>
+            </ul>
+            <ul class="columne card">
+              <h6 class="footer-title">Chấp nhận thanh toán</h6>
+              <ul class="bg-card">
+                <li>
+                  <a href="#"
+                    ><img
+                      class="footer-mini-block__payment-item-img"
+                      src="https://st-fe-v2.fado.vn/desktop/image/list-bank/mastercard.png"
+                      alt="payment icon"
+                    />
+                  </a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><img
+                      class="footer-mini-block__payment-item-img"
+                      src="https://st-fe-v2.fado.vn/desktop/image/list-bank/visa.png"
+                      alt="payment icon"
+                  /></a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><img
+                      class="footer-mini-block__payment-item-img"
+                      src="https://st-fe-v2.fado.vn/desktop/image/list-bank/jcb.png"
+                      alt="payment icon"
+                  /></a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><img
+                      class="footer-mini-block__payment-item-img"
+                      src="https://st-fe-v2.fado.vn/desktop/image/list-bank/zalopay.png"
+                      alt="payment icon"
+                  /></a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><img
+                      class="footer-mini-block__payment-item-img"
+                      src="https://st-fe-v2.fado.vn/desktop/image/list-bank/payoo.png"
+                      alt="payment icon"
+                  /></a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><img
+                      class="footer-mini-block__payment-item-img"
+                      src="https://st-fe-v2.fado.vn/desktop/image/list-bank/napas_v2.jpg"
+                      alt="payment icon"
+                  /></a>
+                </li>
+              </ul>
+            </ul>
+            <ul class="columne certify">
+                <h6 class="footer-title">Chứng nhận bởi</h6>
+                <li>
+                  <a
+                    ><img class="footer-mini-block__certify-item-img" src="https://st-fe-v2.fado.vn/desktop/image/logo/tnm.png" alt="Chung nhan Tin Nhiem Mang FADO"></a>
+                </li>
+                <li>
+                  <a
+                    ><img class="footer-mini-block__certify-item-img ls-is-cached lazyloaded" src="https://st-fe-v2.fado.vn/desktop/image/icons/bo-cong-thuong_v2.png?v=3.239.3.12" data-src="https://st-fe-v2.fado.vn/desktop/image/icons/bo-cong-thuong_v2.png?v=3.239.3.12" alt="chung nhan bo cong thuong"></a>
+                </li>
+              </ul>
+          </div>
         </div>
-        <hr style="color: aliceblue" />
-      </div> 
-      <div class="footer-foot"> <hr style="color: aliceblue;">
+      </div>
+      <div class="footer-foot">
         <div class="footer-foot-clo">
           <h6>TÊN DOANH NGHIỆP: CÔNG TY CỔ PHẦN FADO GLOBAL</h6>
-          <p>Địa chỉ công ty: 60 Nguyễn Đình Chiểu, Phường Đa Kao, Quận 1, Thành phố Hồ Chí Minh, Việt Nam Giấy phép số 0316534223. Chịu trách nhiệm: FADO GLOBAL</p>
+          <p>
+            Địa chỉ công ty: 60 Nguyễn Đình Chiểu, Phường Đa Kao, Quận 1, Thành
+            phố Hồ Chí Minh, Việt Nam Giấy phép số 0316534223. Chịu trách nhiệm:
+            FADO GLOBAL
+          </p>
         </div>
         <div class="footer-foot-clo">
           <h6>TRỤ SỞ</h6>
-          <p>21Bis Hậu Giang, Phường 4, Quận Tân Bình, TP. HCM
-            95-97 Lê Duẩn, Phường Cửa Nam, Quận Hoàn Kiếm, TP. Hà Nội</p>
+          <p>
+            21Bis Hậu Giang, Phường 4, Quận Tân Bình, TP. HCM 95-97 Lê Duẩn,
+            Phường Cửa Nam, Quận Hoàn Kiếm, TP. Hà Nội
+          </p>
         </div>
       </div>
     </footer>
